# srctools

./: .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  build_compiler.py  build_fgd.py  docs-requirements.txt  meson.build  meson.options  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tool-requirements.txt  tox.ini
.github/workflows/: build-wheels.yml  python-package.yml  read_deps.py  run-tests.yml  run-tools.yml
dev/structs/: __init__.py  static_prop.py
docs/: check_api.py
docs/source/: changelog.rst  conf.py  deprecations.rst  enum_class.py  html_gen.py  index.rst  missing_refs.py
examples/: keyvalues.py
fgd/: base.fgd  halflife2.fgd  portal2.fgd
libsquish/: colourblock.h  squish.cpp  squish.h
src/libsquish/: alpha.cpp  alpha.h  colourblock.cpp  squish.cpp
src/srctools/: __init__.py  _class_resources.py  _crc_map.py  _cy_vtf_readwrite.cpp  _cy_vtf_readwrite.pyx  _engine_db.py  _fgd_helpers.py  _hpy_tokenizer.c  _math.cpp  _math.pxd  _math.pyx  _math_matrix.cpp  _math_matrix.h  _points_map.py  _py_vtf_readwrite.py  _shaderdb.py  _tokenizer.c  _tokenizer.pyx  _version.input.py  binformat.py  bsp.py  captions.py  choreo.py  cmdseq.py  const.py  dmx.py  dmx.pyi  fgd.lzma  fgd.py  filesys.py  game.py  game_mount.py  geometry.py  instancing.py  keyvalues.py  logger.py  math.py  mdl.py  meson.build  packlist.py  (+20 more)
src/srctools/_class_resources/: __init__.py  ai_.py  asw_.py  env_.py  filters.py  func_.py  item_.py  logic.py  npcs.py  props.py  triggers.py  weapons.py
src/srctools/_pyinstaller/: __init__.py  hook-srctools.py  meson.build
src/srctools/scripts/: build_scenes_image.py  collapse_manifest.py  diff.py  dump_parms.py  dump_proxies.py  find_deps.py  make_model_folders.py  meson.build
srctools/: __init__.py  _class_resources.py  _cy_vtf_readwrite.c  _cy_vtf_readwrite.cpp  _cy_vtf_readwrite.pyx  _fgd_helpers.py  _math.c  _math.cpp  _math.pxd  _math.pyx  _py_vtf_readwrite.py  _shaderdb.py  _tokenizer.c  _tokenizer.pyx  _vec.c  _vec.pyx  _vtf_frame.py  _vtf_readwrite.py  binformat.py  bsp.py  cmdseq.py  const.py  dmx.py  dmx.pyi  fgd.lzma  fgd.py  filesys.py  game.py  ice.c  ice.pyx  instancing.py  logger.py  math.py  mdl.py  p2c.py  packlist.py  property_parser.py  qc.py  quickhull.pxd  rotation.py  (+11 more)
srctools/_class_resources/: __init__.py  ai_.py  asw_.py  env_.py  func_.py  item_.py  logic.py  npcs.py  props.py  triggers.py  weapons.py
srctools/_pyinstaller/: hook-srctools.py
srctools/pyinstaller_hook/: hook-importlib_resources.py
srctools/scripts/: diff.py  dump_parms.py  find_deps.py  unify_fgd.py  vrad.py
srctools/test/: __init__.py  gen_rot_vmf.py  rot_main.vmf  rotation_test_gen.nut  test_angles.py  test_core.py  test_dmx.py  test_fgd.py  test_property_parser.py  test_rotation.py  test_rotations.py  test_tokenizer.py  test_utils.py  test_vec.py  test_vmf.py
tests/: gen_rot_vmf.py  helpers.py  ruff.toml  test_angles.py  test_binformat.py  test_bsp.py  test_bsp_entities.py  test_bsp_staticprops.py  test_captions.py  test_choreo.py  test_class_resources.py  test_cmdseq.py  test_const.py  test_core.py  test_crc_map.py  test_dmx.py  test_fgd.py  test_geometry.py  test_instancing.py  test_keyvalues.py  test_logger.py  test_matrix.py  test_packlist.py  test_particles.py  test_points_map.py  test_property_parser.py  test_rotations.py  test_smoke.py  test_sndscape.py  test_sndscript.py  test_tokenizer.py  test_vec.py  test_vmf.py  test_vmt.py  test_vpk.py  test_vtf.py
tests/instances/: rot_inst.vmf
tests/test_bsp_entities/: ent_lump.lmp
tests/test_bsp_staticprops/: test_export_v10_.lmp  test_export_v4_.lmp  test_export_v5_.lmp  test_export_v6_.lmp  test_export_v7_.lmp  test_export_v8_.lmp  test_export_v9_.lmp  test_export_v_chaos_.lmp  test_export_v_chaos_v13_.lmp  test_export_v_lightmap_mesa_.lmp  test_export_v_lightmap_v10_.lmp  test_export_v_strata_v13_.lmp
tests/test_choreo/: sample.vcd  test_save_binary.bvcd  test_save_text.vcd
tests/test_cmdseq/: sequence_binary_v2.wc  sequence_hammerplusplus_kv.cfg  sequence_strata_kv.wc  test_export_binary.wc  test_export_keyvalues_hammerplusplus_.cfg  test_export_strata_keyvalues.wc
tests/test_dmx/: binary_v2.dmx  binary_v4.dmx  binary_v5.dmx  keyvalues2.dmx  kv2_long_header.dmx  remake_binary.bat  test_export_regression_binary_v1_.dmx  test_export_regression_binary_v2_.dmx  test_export_regression_binary_v3_.dmx  test_export_regression_binary_v4_.dmx  test_export_regression_binary_v5_.dmx  test_export_regression_text_flat_.dmx  test_export_regression_text_flat_cull_.dmx  test_export_regression_text_indent_.dmx  test_export_regression_text_indent_cull_.dmx  tf_movies_text.dmx
tests/test_fgd/: entity_parse.fgd  parse_helpers_ext.fgd  parse_helpers_icon.fgd  parse_helpers_simple.fgd  parse_helpers_special.fgd  test_entity_roundtrip.fgd  test_export_kvflags_new_custom_.fgd  test_export_kvflags_new_vanilla_.fgd  test_export_kvflags_old_custom_.fgd  test_export_kvflags_old_vanilla_.fgd  test_export_regressions.fgd  test_export_regressions_custom_.fgd  test_export_regressions_vanilla_.fgd  test_export_spawnflag_label_False_.fgd  test_export_spawnflag_label_True_.fgd  test_export_spawnflag_label_added_.fgd  test_export_spawnflag_label_none_.fgd
tests/test_geometry/: carve_tests.vmf  cube_clip_down.vmf  cube_clip_east.vmf  cube_clip_north.vmf  cube_clip_south.vmf  cube_clip_up.vmf  cube_clip_west.vmf  test_carve.vmf  test_merge.vmf
tests/test_logger/: test_logging_output.txt
tests/test_particles/: sample.pcf
tests/test_sndscape/: sample_scape.txt  test_roundtrip.txt
tests/test_vmf/: test_blank_vmf.vmf  test_regression.vmf
tests/test_vmt/: test_export.vmt
tests/test_vtf/: hotspot.vtf  sample_a8.vmt  sample_a8.vtf  sample_abgr8888.vmt  sample_abgr8888.vtf  sample_argb8888.vmt  sample_argb8888.vtf  sample_bgr565.vmt  sample_bgr565.vtf  sample_bgr888.vmt  sample_bgr888.vtf  sample_bgra4444.vmt  (+181 more)
type_tests/: README.md  ruff.toml  test_core.py  test_math_ops.py  typ_test_core.py  typ_test_math_ops.py  typ_test_vmf.py
(+54 files in other folders)
