[metadata]
name = srctools
url = https://github.com/TeamSpen210/srctools
description = Modules for working with Valve's Source Engine file formats.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = Valve, Source Engine
author = TeamSpen210
author_email = spencerb21@live.com
license = MIT
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = srctools*

[options.entry_points]
console_scripts =
	srctools_dump_parms = srctools.scripts.dump_parms:main
	srctools_diff = srctools.scripts.diff:main
	srctools_find_deps = srctools.scripts.find_deps:main
pyinstaller40 =
	hook-dirs = srctools._pyinstaller:get_hook_dirs

[options.extras_require]
# VTF support.
wx = wxPython
test =
	pytest
	pytest-datadir
	pytest-regressions

[flake8]
# Tests deliberately do incorrect things to test code.
# _cls_resources is just intended to be run, flake8 fails on the star imports
# used.
exclude = .git,__pycache__,.tox,.eggs,*.egg,_class_resources,tests
max-line-length=127
